(fix) moved input up z-index)

--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ body{
 
 #overReact-container form {
   float: right;
+  z-index: 999;
 }
 .ui-state-hover {
   background-color: transparent;
